--- a/lista_fluterando/pubspec.yaml
+++ b/lista_fluterando/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   result_dart: ^1.0.5
   flutter_modular: ^5.0.3
   realm: ^1.0.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
